# zeref-memory-engine

./: .aider.conf.yml.example  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG-LEGACY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODEX.md  CONTRIBUTING.md  GEMINI.md  GITHUB_OS.md  INSTALL.md  LICENSE  LLAMA.md  MIGRATION.md  PRIVACY.md  QUICKSTART.md  README.md  REDACT.md  SECURITY.md  SECURITY_CONTACTS.md  SHARING_POLICY.md  SKILL.md  SOUL.md  TASKS.md  ZEREF.md  ZEREFOS.md  ZEREFPROJECT.md  pyproject.toml  pytest.ini  zeref-install.sh  zeref-mcp-stack.md  zeref-registry.json  zeref-settings-recommended.json  zeref-validate.py
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
_shared/: model-resolver.md  rules.md
_templates/: CLAUDE.md  CoworkInstructions.md  ZerefClaude.md
agents/: evidence-curator.md  handoff-orchestrator.md  memory-keeper.md  pattern-observer.md  privacy-guardian.md  sync-coordinator.md  zeref-context-engine.md  zeref-council-convener.md  zeref-evaluator.md  zeref-executive-qa-agent.md  zeref-fleet-router.md  zeref-memory-keeper.md  zeref-release-governor.md  zeref-trust-sentinel.md
benchmarks/: RUBRIC.md  adapter_value.py  adapters.py  adaptivity.py  contradiction_detection.py  critical_adoption_coverage.py  foreign_code_containment.py  handoff_success.py  helpers.py  high_adoption_coverage.py  license_boundary.py  lineage_common.py  lineage_import_coverage.py  loop_control.py  memory_refinement.py  minimality_pressure.py  portability.py  privacy_safety.py  prompt_rewrite_quality.py  public_claim_safety.py  reference_only_guardrails.py  results.json  retrieval.py  retrieval_accuracy.py  run-all.py  scalability.py  security_containment.py  token_efficiency.py  trust.py
commands/: done.md  reset-permissions.md  review-skill.md  start.md  status.md  stop.md  sync-parent.md  team.md  zeref-activate.md  zeref-activate.toml  zeref-audit.md  zeref-audit.toml  zeref-handoff.md  zeref-handoff.toml  zeref-install-web-stack.md  zeref-install-web-stack.toml  zeref-orient.md  zeref-orient.toml  zeref-recall.md  zeref-recall.toml  zeref-save.md  zeref-save.toml  zeref-ship.md  zeref-ship.toml  zeref-validate.md  zeref-validate.toml  zeref-weekly-report.toml  zeref-welcome.toml
config/: BUDGET.md  COST_POLICY.json  COST_POLICY.md  PARENT_SYNC.md  PERMISSIONS.md  PRIVACY.md  PROJECT.md  claude-overrides.md
docs/: 00_START_HERE.md  01_Installation_Guide.md  02_Prompt_Architecture.md  03_Skills_Fleet_Guide.md  04_MCP_Integration.md  05_Memory_System.md  06_Workflow_Examples.md  07_Troubleshooting.md  08_Inspiration_Deep_Dive.md  09_Notion_Dashboard.md  AUDIT_LOGS.md  BENCHMARK_ADAPTERS.md  BENCHMARK_REPORT.md  CONTRADICTIONGUARD.md  DEPRECATIONS.md  DOCTOR.md  EVIDENCEGUARD.md  FACTGUARD.md  GETTING_STARTED.md  GLOSSARY.md  HARDENING_OVERVIEW.md  HARNESS_MATRIX.md  LINEAGE_UPGRADE_ROADMAP.md  MEMORY_MODEL.md  MEMORY_WRITES.md  PIVOT_LOG.md  PRIVACYGUARD.md  PUBLIC_SAFE_COPY.md  PUBLIC_SURFACE.md  RELEASE_GATES.md  RELEASE_LOG.md  RELEASE_PROCESS.md  RETRIEVAL_BENCHMARKS.md  RISK_LOG.md  (+3 more)
(+664 files in other folders)
