# privacy-audit: allow-file "Package metadata. Author name + description + keywords are public-package metadata by design, not user data."
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeref-os"
version = "1.1.1"
description = "Zeref OS — local-first context and memory engine for AI harnesses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "memory", "context", "llm", "agent", "zeref"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Core: stdlib only — zero mandatory deps
dependencies = []

[project.optional-dependencies]
llm    = ["litellm>=1.0"]    # zeref grade (LLM-enhanced)
duckdb = ["duckdb>=0.10"]    # zeref db snapshot --parquet
yaml   = ["pyyaml>=6.0"]     # richer REDACT.md YAML parsing
all    = ["litellm>=1.0", "duckdb>=0.10", "pyyaml>=6.0"]

[project.scripts]
zeref = "zeref.cli:main"

[project.urls]
Homepage  = "https://github.com/kanadhiayash/zeref-memory-engine"
Changelog = "https://github.com/kanadhiayash/zeref-memory-engine/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["zeref*"]

[tool.setuptools.package-data]
zeref = ["VERSION"]
